[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.8"
dialoguer = "0.11.0"
lazy_static = "1.5.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
axum = "*"
serde = { version = "1.0", features = ["derive"] }
serde-this-or-that = "*"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5.1", features = ["util", "timeout"] }
tower-http = { version = "0.6.1", features = ["add-extension", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
